--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#72DDF7</color>
+    <color name="colorPrimaryDark">#8093F1</color>
     <color name="colorAccent">#D81B60</color>
+    
+<!--    my custom oolors-->
+    <color name="colorBilobaFlower">#B388EB</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorBlack">#000</color>
+
 </resources>
